--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'org.apache.httpcomponents:httpcore:4.4.1'
     compile 'org.apache.httpcomponents:httpclient:4.5'
+    compile 'com.googlecode.json-simple:json-simple:1.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
